// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button base demo works fine 1`] = `
<button
  class="t-button t-button--primary"
>
  Button
</button>
`;

exports[`Button block demo works fine 1`] = `
<div>
  <button
    class="t-button t-button--primary t-size-full-width"
  >
    主按钮
  </button>
   
  <button
    class="t-button t-button--line t-size-full-width"
  >
    次要按钮
  </button>
   
  <button
    class="t-button t-button--dashed t-size-full-width"
  >
    虚框按钮
  </button>
   
  <button
    class="t-button t-button--warning t-size-full-width"
  >
    告警按钮
  </button>
   
  <button
    class="t-button t-button--warning-line t-size-full-width"
  >
    次要告警
  </button>
   
  <button
    class="t-button t-button--link t-size-full-width"
  >
    文字按钮
  </button>
   
  <button
    class="t-button t-button--ghost t-size-full-width"
  >
    幽灵按钮
  </button>
</div>
`;

exports[`Button icon demo works fine 1`] = `
<!--function (el) {
      var obj;

      var args = [], len = arguments.length - 1;
      while ( len-- &gt; 0 ) args[ len ] = arguments[ len + 1 ];
      if (shouldNotBeStubbed(el, stubs, modifiedComponents)) {
        return originalCreateElement.apply(void 0, [ el ].concat( args ))
      }

      if (isConstructor(el) || isComponentOptions(el)) {
        if (stubAllComponents) {
          var stub = createStubFromComponent(el, el.name || 'anonymous', _Vue);
          return originalCreateElement.apply(void 0, [ stub ].concat( args ))
        }
        var Constructor = shouldExtend(el, _Vue) ? extend(el, _Vue) : el;

        return originalCreateElement.apply(void 0, [ Constructor ].concat( args ))
      }

      if (typeof el === 'string') {
        var original = resolveComponent(el, originalComponents);

        if (!original) {
          return originalCreateElement.apply(void 0, [ el ].concat( args ))
        }

        if (isDynamicComponent(original)) {
          return originalCreateElement.apply(void 0, [ el ].concat( args ))
        }

        var stub$1 = createStubIfNeeded(stubAllComponents, original, _Vue, el);

        if (stub$1) {
          Object.assign(vm.$options.components, ( obj = {}, obj[el] = stub$1, obj));
          modifiedComponents.add(el);
        }
      }

      return originalCreateElement.apply(void 0, [ el ].concat( args ))
    }-->
`;

exports[`Button loading demo works fine 1`] = `
<div
  class="button-base"
>
  <button
    class="t-button t-button--primary t-is-loading"
  >
    <svg
      class="t-icon t-icon-loading_gradient"
    >
      <use
        xlink:href="#t-icon-loading_gradient"
      />
    </svg>
    <span
      class="t-button__text"
    >
      
    主按钮
  
    </span>
  </button>
   
  <button
    class="t-button t-button--line t-is-loading"
  >
    <svg
      class="t-icon t-icon-loading_gradient"
    >
      <use
        xlink:href="#t-icon-loading_gradient"
      />
    </svg>
    <span
      class="t-button__text"
    >
      
    次按钮
  
    </span>
  </button>
</div>
`;

exports[`Button render-icon demo works fine 1`] = `
<button
  class="t-button t-button--primary"
>
  <span>
    ×
  </span>
  <span
    class="t-button__text"
  >
    
  主按钮

  </span>
</button>
`;

exports[`Button size demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-size-s t-button--primary"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-size-s t-button--line"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-size-s t-button--dashed"
    >
      虚框按钮
    </button>
     
    <button
      class="t-button t-size-s t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-size-s t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-size-s t-button--link"
    >
      文字按钮
    </button>
     
    <button
      class="t-button t-size-s t-button--ghost"
    >
      幽灵按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--primary"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-button--line"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-button--dashed"
    >
      虚框按钮
    </button>
     
    <button
      class="t-button t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-button--link"
    >
      文字按钮
    </button>
     
    <button
      class="t-button t-button--ghost"
    >
      幽灵按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-size-l t-button--primary"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-size-l t-button--line"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-size-l t-button--dashed"
    >
      虚框按钮
    </button>
     
    <button
      class="t-button t-size-l t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-size-l t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-size-l t-button--link"
    >
      文字按钮
    </button>
     
    <button
      class="t-button t-size-l t-button--ghost"
    >
      幽灵按钮
    </button>
  </div>
</div>
`;

exports[`Button status demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--primary"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-button--primary t-is-disabled"
    >
      主按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--line"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-button--line t-is-disabled"
    >
      次要按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--dashed"
    >
      虚框按钮
    </button>
     
    <button
      class="t-button t-button--dashed t-is-disabled"
    >
      虚框按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-button--warning t-is-disabled"
    >
      告警按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-button--warning-line t-is-disabled"
    >
      次要告警
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--link"
    >
      链接文字按钮
    </button>
     
    <button
      class="t-button t-button--link t-is-disabled"
    >
      链接文字按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--ghost"
    >
      幽灵按钮
    </button>
     
    <button
      class="t-button t-button--ghost t-is-disabled"
    >
      幽灵按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--ghost-line"
    >
      幽灵次要按钮
    </button>
     
    <button
      class="t-button t-button--ghost-line t-is-disabled"
    >
      幽灵次要按钮
    </button>
  </div>
</div>
`;

exports[`Button theme demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--primary"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-button--line"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-button--dashed"
    >
      虚框按钮
    </button>
     
    <button
      class="t-button t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-button--link"
    >
      文字按钮
    </button>
     
    <button
      class="t-button t-button--ghost"
    >
      幽灵按钮
    </button>
  </div>
</div>
`;
